@@ -960,6 +960,8 @@ void add_entry(char *key, char *value)
         hide_inactive_tasks = atoi(value);
     } else if (strcmp(key, "taskbar_hide_different_monitor") == 0) {
         hide_task_diff_monitor = atoi(value);
+    } else if (strcmp(key, "taskbar_hide_different_desktop") == 0) {
+        hide_task_diff_desktop = atoi(value);
     } else if (strcmp(key, "taskbar_hide_if_empty") == 0) {
         hide_taskbar_if_empty = atoi(value);
     } else if (strcmp(key, "taskbar_always_show_all_desktop_tasks") == 0) {
