@@ -1,3 +1,7 @@
+2017-06-20 master
+- Enhancements:
+  - Taskbar: new config option taskbar_hide_different_desktop
+
 2017-06-11 0.14.6
 - Fixes:
   - Take into account border width when computing text height
